--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
       <h1>QR Code Generator</h1>
       <textarea id="qrInput" placeholder="Enter text or URL here..." rows="4"></textarea>
       <button id="generateBtn">Generate QR Code</button>
-
-      <!-- Logo Upload Section -->
-      <input type="file" id="logoUpload" accept="image/*" />
-      <a id="downloadBtn" class="hidden" href="#" download="qrcode.png">Download QR Code</a>
+      <input type="file" id="logoUpload" accept="image/*">
+      <a id="downloadBtn" href="#" class="hidden" download="qrcode.jpg">Download QR Code</a>
     </div>
 
     <!-- QR Code Section -->
